--- a/frontend/t2/src/app/order-form/order-form.component.html
+++ b/frontend/t2/src/app/order-form/order-form.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-danger" (click)="triggerModal(modalData)">Open Modal</button>
+<label (click)="open(modalData)">NEW ORDER</label>
 
 <ng-template #modalData let-modal>
   <div class="modal-header">
